platform/gitops/apps/dev/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: apps
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: terra
    terra/environment: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: 8080
